--- a/NewBrandingStyle.Web/Views/Shared/Components/LatestItem/Index.cshtml
+++ b/NewBrandingStyle.Web/Views/Shared/Components/LatestItem/Index.cshtml
@@ -1,3 +1,3 @@
-﻿@model CompanyModel
+﻿@model ItemEntity
 
-<div>Latest item added: @Model?.Name</div>
+<div class="text-info p-4 ">Latest item added:<strong> @Model?.Name </strong></div>
