--- a/NewBrandingStyle.Web/Views/_ViewImports.cshtml
+++ b/NewBrandingStyle.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using NewBrandingStyle.Web
 @using NewBrandingStyle.Web.Models
+@using NewBrandingStyle.Web.Models.Database
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, NewBrandingStyle.Web
